# rugby-poc

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  scores.MD  start-ngrok.sh  stop-ngrok.sh
.claude/: settings.json
.claude/hooks/: ruff-fix.sh
alembic/: env.py
alembic/versions/: b2c3d4e5f6a7_add_ai_analysis_status.py  c3d4e5f6a7b8_add_player_evolution_fields.py  e530b49e113f_add_match_metadata_fields.py  e5f6a7b8c9d0_add_player_weight_height.py
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  constants.py  database.py  main.py
backend/tests/: __init__.py  conftest.py  test_ai_prompt_builder.py  test_anomaly_detection.py  test_player_update.py  test_position_groups.py  test_scoring.py
data/: Partidos.xlsx  Template.xlsx  ~$Partidos.xlsx
docs/plans/: 2026-02-12-per-position-weights-design.md  2026-02-12-per-position-weights-plan.md  2026-02-12-player-profile-fields-design.md  2026-02-12-player-profile-fields-plan.md  2026-02-12-position-group-ai-analysis-design.md  2026-02-12-position-group-ai-analysis-plan.md  2026-02-19-remove-rankings-ui-design.md  2026-02-19-remove-rankings-ui-plan.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
src/rugby_stats/: config.py  (+3 more)
tests/: conftest.py  test_ai_prompt_builder.py  test_anomaly_detection.py  test_player_update.py  test_position_groups.py  test_scoring.py
(+109 files in other folders)
