[project]
name = "rugby-stats"
version = "0.1.0"
description = "Rugby match statistics analysis system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "psycopg[binary]>=3.1.17",
    "alembic>=1.13.1",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
rugby = "rugby_stats.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rugby_stats"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
